-fixed header overflow

--- a/src/features/Header/Header.module.css
+++ b/src/features/Header/Header.module.css
@@ -208,7 +208,7 @@
         background-color: whiteColor;
         transition: 0.3s;
         overflow: auto;
-        z-index: 1;
+        z-index: 1000;
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
@@ -236,7 +236,6 @@
         height: 16px;
         color: greyColor;
     }
-
 
     .burger.active:before {
         transform: rotate(45deg);
@@ -289,7 +288,8 @@
         top: 98px;
         width: 100%;
         background-color: black;
-        opacity: 0.2;
+        opacity: 0.5;
+        z-index: 999;
     }
 
 }
